Refactor `RadioWheelOverlay` and `RadioMenuActivity` for improved volume handling logic and configuration retrieval.